Swap button and fix alignment (#553)

--- a/frontend/src/pages/Player/Toolbar/Toolbar.module.scss
+++ b/frontend/src/pages/Player/Toolbar/Toolbar.module.scss
@@ -267,7 +267,7 @@
 }
 
 .popoverHeader {
-    width: 100%;
+    width: 240px;
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
